Desenvolvimento da página de unidades;
Temporariamente parada por conta do grito de guerra das unidades.

--- a/PathfindersClubApp/PathfindersClubApp.Android/PathfindersClubApp.Android.csproj
+++ b/PathfindersClubApp/PathfindersClubApp.Android/PathfindersClubApp.Android.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <AndroidAsset Include="Assets\Caramelia.otf" />
     <AndroidAsset Include="Assets\AmaticSC-Regular.ttf" />
+    <AndroidAsset Include="Assets\Allan-Regular.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
