--- a/PathfindersClubApp/PathfindersClubApp/PathfindersClubApp.csproj
+++ b/PathfindersClubApp/PathfindersClubApp/PathfindersClubApp.csproj
@@ -29,6 +29,8 @@
 
   <ItemGroup>
     <Folder Include="Texts\" />
+    <Folder Include="ViewModels\Units\" />
+    <Folder Include="Views\Units\" />
   </ItemGroup>
 
 </Project>
