main page background DONE.

--- a/PathfindersClubApp/PathfindersClubApp/PathfindersClubApp.csproj
+++ b/PathfindersClubApp/PathfindersClubApp/PathfindersClubApp.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Texts\**" />
+    <EmbeddedResource Remove="Texts\**" />
+    <None Remove="Texts\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.991211" />
@@ -58,10 +64,6 @@
     <EmbeddedResource Update="Views\Units\TucanosUnitPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Texts\" />
   </ItemGroup>
 
 </Project>
