--- a/PathfindersClubApp/PathfindersClubApp.Android/PathfindersClubApp.Android.csproj
+++ b/PathfindersClubApp/PathfindersClubApp.Android/PathfindersClubApp.Android.csproj
@@ -196,5 +196,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\background_directors.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\background_main_01.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\background_main_02.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\background_main_03.jfif" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
